// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorSettingsTabContent hides space settings indentWithTabs is true 1`] = `
<div>
  <div
    class="list-group"
  >
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.ligatures.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-ligatures"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-ligatures"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.ligatures.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.smartPaste.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-smart-paste"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-smart-paste"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.smartPaste.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.syncScroll.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-sync-scroll"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-sync-scroll"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.syncScroll.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.lineWrapping.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-line-wrapping"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-line-wrapping"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.lineWrapping.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.spellCheck.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-spell-check"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-spell-check"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.spellCheck.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.indentWithTabs.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-indent-with-tabs"
              title="settings.editor.indentWithTabs.tabs"
              type="radio"
            >
              settings.editor.indentWithTabs.tabs
            </button>
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-indent-with-tabs"
              title="settings.editor.indentWithTabs.spaces"
              type="radio"
            >
              settings.editor.indentWithTabs.spaces
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.indentWithTabs.help
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditorSettingsTabContent renders space settings when indentWithTabs is false 1`] = `
<div>
  <div
    class="list-group"
  >
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.ligatures.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-ligatures"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-ligatures"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.ligatures.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.smartPaste.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-smart-paste"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-smart-paste"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.smartPaste.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.syncScroll.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-sync-scroll"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-sync-scroll"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.syncScroll.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.lineWrapping.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-line-wrapping"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-line-wrapping"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.lineWrapping.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.spellCheck.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-spell-check"
              title="common.on"
              type="radio"
            >
              common.on
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-spell-check"
              title="common.off"
              type="radio"
            >
              common.off
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.spellCheck.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.indentWithTabs.label
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-outline-secondary"
              data-testid="onOffButtonGroupOn"
              name="settings-indent-with-tabs"
              title="settings.editor.indentWithTabs.tabs"
              type="radio"
            >
              settings.editor.indentWithTabs.tabs
            </button>
            <button
              class="btn btn-secondary"
              data-testid="onOffButtonGroupOff"
              name="settings-indent-with-tabs"
              title="settings.editor.indentWithTabs.spaces"
              type="radio"
            >
              settings.editor.indentWithTabs.spaces
            </button>
          </div>
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.indentWithTabs.help
        </div>
      </div>
    </div>
    <div
      class="list-group-item"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          settings.editor.indentSpaces.label
        </div>
        <div
          class="col-md-4"
        >
          <input
            class="w-auto form-control"
            min="1"
            type="number"
            value="7"
          />
        </div>
        <div
          class="col-md-5"
        >
          settings.editor.indentSpaces.help
        </div>
      </div>
    </div>
  </div>
</div>
`;
